--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>selinaZ OS</title>
   </head>
   <body>
     <noscript>
